--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -9,9 +9,6 @@
   & a {
     color: black !important;
   }
-  &:hover {
-    border-bottom:4px double black !important;
-  }
 }
 
 //styles for filter icons
@@ -25,6 +22,19 @@
     &:hover {
       opacity: 0.5;
     }
+  }
+}
+
+.project-filters {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  & li i {
+    line-height: inherit !important;
+    height: inherit !important;
+    font-size: 1.2rem !important;
   }
 }
 
