adjusted user component col offset on grid, configured middleman to push to a middleman branch

--- a/source/_user.html.erb
+++ b/source/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="user col l4 m6 s12">
+<div class="user col l4 m6 s12 offset-l1">
 
   <div class='user-content center-align'>
     <%= image_tag "dana.png", class: "avatar" %>
