added jquery to fix page layout due to '.user' now being offset within the grid

--- a/source/_cv.html.erb
+++ b/source/_cv.html.erb
@@ -226,6 +226,7 @@
 
 <script>
   $('#trigger-back').click(function() {
+    $('.user').addClass('offset-l1');
     $('.content-base').addClass('hidden');
     $('.content-container').removeClass('hidden');
   });
