--- a/source/_projects.html.erb
+++ b/source/_projects.html.erb
@@ -157,6 +157,7 @@
   <script>
     $(document).ready(function(){
       $('#trigger-back').click(function() {
+        $('.user').addClass('offset-l1');
         $('.content-base').addClass('hidden');
         $('.content-container').removeClass('hidden');
       });
