--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,12 +26,14 @@
 <script>
 
   $('#projects').click(function () {
+    $('.user').removeClass('offset-l1');
     $('.content-container').addClass('hidden');
     $('.content-base').removeClass('hidden');
     $('.content-base').html('<%= escape_javascript(partial 'projects') %>')
   });
 
   $('#cv').click(function () {
+    $('.user').removeClass('offset-l1');
     $('.content-container').addClass('hidden');
     $('.content-base').removeClass('hidden');
     $('.content-base').html('<%= escape_javascript(partial 'cv') %>')
