--- a/source/_user.html.erb
+++ b/source/_user.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "dana.png", class: "avatar" %>
     <div class="text-user margins">
       <h4>Dana Alibrandi</h4>
-      <p>I'm a full stack developer, technical product manager, and instructor based in Los Angeles, California. I specialize in consumer web development.</p>
+      <p>I'm a technical product manager and instructor based in Los Angeles, California. I specialize in blockchain, cryptocurrency, and decentralized networks. I'm authorized to work in both the US and EU.</p>
     </div>
     <div class="icons margins">
       <ul class="priority-icons">
