--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,14 +5,14 @@
     <div class="polygon-2"></div>
     <div class="polygon-3"></div>
     <div class="wrapper-btn">
-      <div class="btn-main" id="projects">
+      <!-- <div class="btn-main" id="projects">
         <h6>
           <i class="fa fa-folder-open" aria-hidden="true"></i>
           Projects
         </h6>
-      </div>
+      </div> -->
       <div class="btn-main" id="cv">
-        <h6>
+        <h6 style='margin: 1px;'>
           <i class="fa fa-suitcase" aria-hidden="true"></i>
           CV
         </h6>
@@ -25,12 +25,12 @@
 
 <script>
 
-  $('#projects').click(function () {
-    $('.user').removeClass('offset-l1');
-    $('.content-container').addClass('hidden');
-    $('.content-base').removeClass('hidden');
-    $('.content-base').html('<%= escape_javascript(partial 'projects') %>')
-  });
+  // $('#projects').click(function () {
+  //   $('.user').removeClass('offset-l1');
+  //   $('.content-container').addClass('hidden');
+  //   $('.content-base').removeClass('hidden');
+  //   $('.content-base').html('<%= escape_javascript(partial 'projects') %>')
+  // });
 
   $('#cv').click(function () {
     $('.user').removeClass('offset-l1');
@@ -40,4 +40,3 @@
   });
 
 </script>
-
