--- a/source/stylesheets/layout/_content.scss
+++ b/source/stylesheets/layout/_content.scss
@@ -84,6 +84,7 @@
   border-bottom: 900px solid transparent;
   border-left: 400px solid black;
   transform: rotate(-22deg);
+  position: absolute;
 }
 
 .polygon-2 {
@@ -100,7 +101,7 @@
   width: 0;
   height: 0;
   border-top: 200px solid transparent;
-  border-bottom: 800px solid transparent;
+  border-bottom: 1000px solid transparent;
   border-left: 300px solid black;
   transform: rotate(-210deg);
   position: absolute;
